@@ -7,6 +7,7 @@ pydantic==1.10.2
 pydantic-xml[lxml]==0.2.2
 python-dotenv==0.21.0
 setuptools-scm==7.0.5
+slack_sdk==3.27.2
 tortoise-orm==0.19.3
 types-setuptools==65.4.0.0
 uvicorn==0.22
