@@ -1,4 +1,14 @@
-### Fix dockerfile (HEAD -> fix_dockerfile)
+### Added Slack support for contacting the administrator (HEAD -> slack_support)
+>Mon, 3 Jun 2024 15:33:53 +0200
+
+>Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)
+
+>Commiter: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)
+
+
+
+
+### Fix dockerfile (origin/fix_dockerfile, fix_dockerfile)
 >Fri, 31 May 2024 09:19:48 +0200
 
 >Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)
